Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/diamond/neg/Neg19.out
Neg19.java:13:34: compiler.err.report.access: Neg19_01.Private, private, Neg19_01
1 error
